--- a/wellio-backend/core/package.json
+++ b/wellio-backend/core/package.json
@@ -10,7 +10,7 @@
     "test": "jest",
     "test:watch": "jest --watch",
     "lint": "eslint src/**/*.ts",
-    "build:sdk": "openapi-generator-cli generate -i openapi.yaml -g typescript-fetch -o sdk --additional-properties=supportsES6=true,npmName=@wellio/sdk,npmVersion=1.0.0"
+    "build:sdk": "openapi-generator-cli generate -i ./openapi.yaml -g typescript-fetch -o ./sdk --skip-validate-spec"
   },
   "dependencies": {
     "express": "^4.18.2",
@@ -49,7 +49,7 @@
     "eslint": "^8.54.0",
     "@typescript-eslint/eslint-plugin": "^6.12.0",
     "@typescript-eslint/parser": "^6.12.0",
-    "openapi-generator-cli": "^2.7.0",
+    "@openapitools/openapi-generator-cli": "^2.12.0",
     "supertest": "^6.3.3",
     "@types/supertest": "^2.0.16",
     "winston": "^3.11.0"
