feat: Create and wire @wellio/shared workspace package
- Add npm workspaces configuration with packages/shared
- Create @wellio/shared package with DTO types and Zod schemas
- Build shared package to dist with TypeScript declarations
- Update Core API to use workspace package imports
- Fix all ErrorCodes references to use local constants
- Simplify Core API tsconfig.json for Node resolution
- Add build and dev:core scripts for shared package workflow
- Update Node.js version requirement to >=18 <21

The Core API now starts successfully and uses the shared package
for type safety and validation schemas.

--- a/wellio-backend/core/package.json
+++ b/wellio-backend/core/package.json
@@ -13,6 +13,7 @@
     "build:sdk": "openapi-generator-cli generate -i ./openapi.yaml -g typescript-fetch -o ./sdk --skip-validate-spec"
   },
   "dependencies": {
+    "@wellio/shared": "file:../packages/shared",
     "express": "^4.18.2",
     "cors": "^2.8.5",
     "helmet": "^7.1.0",
