feat: Implement dual-mode seeding system for Core API
- Add memory-based data store with realistic demo data
- Create repository abstraction supporting memory and future DB modes
- Implement auto-seeding on Core API startup
- Update all Core modules to use repository instead of mock data
- Add environment configuration for CORE_DATA_MODE
- Fix Auth ↔ Core JWT integration with proper environment loading
- Add comprehensive test data for clients, sessions, conversations, insights
- Enable immediate mobile app development without PostgreSQL setup

Key features:
- CORE_DATA_MODE=memory (default) for instant demo data
- CORE_DATA_MODE=db (future) for production database
- Realistic seed data with 5 clients, 3 sessions, 2 conversations
- Repository pattern ready for Prisma implementation
- All API endpoints return consistent, paginated data

--- a/wellio-backend/packages/shared/package.json
+++ b/wellio-backend/packages/shared/package.json
@@ -5,15 +5,18 @@
   "type": "commonjs",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
-  "files": ["dist"],
+  "files": [
+    "dist"
+  ],
   "scripts": {
     "build": "tsc -p tsconfig.build.json",
     "dev": "tsc -w -p tsconfig.build.json",
     "clean": "rimraf dist"
   },
   "devDependencies": {
-    "typescript": "^5.9.2",
+    "concurrently": "^9.2.0",
     "rimraf": "^6.0.0",
+    "typescript": "^5.9.2",
     "zod": "^3.23.8"
   }
 }
