--- a/wellio-backend/core/package.json
+++ b/wellio-backend/core/package.json
@@ -10,49 +10,51 @@
     "test": "jest",
     "test:watch": "jest --watch",
     "lint": "eslint src/**/*.ts",
-    "build:sdk": "openapi-generator-cli generate -i ./openapi.yaml -g typescript-fetch -o ./sdk --skip-validate-spec"
+    "build:sdk": "openapi-generator-cli generate -i ./openapi.yaml -g typescript-fetch -o ./sdk --skip-validate-spec",
+    "seed": "ts-node src/scripts/seed.ts"
   },
   "dependencies": {
     "@wellio/shared": "file:../packages/shared",
-    "express": "^4.18.2",
-    "cors": "^2.8.5",
-    "helmet": "^7.1.0",
-    "morgan": "^1.10.0",
-    "compression": "^1.7.4",
-    "express-rate-limit": "^7.1.5",
-    "dotenv": "^16.3.1",
-    "zod": "^3.22.4",
     "bcryptjs": "^2.4.3",
-    "jsonwebtoken": "^9.0.2",
-    "pg": "^8.11.3",
-    "redis": "^4.6.10",
     "bullmq": "^5.0.0",
+    "compression": "^1.7.4",
+    "cors": "^2.8.5",
+    "date-fns": "^2.30.0",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "express-rate-limit": "^7.1.5",
+    "helmet": "^7.1.0",
+    "jsonwebtoken": "^9.0.2",
+    "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
+    "pg": "^8.11.3",
+    "redis": "^4.6.14",
     "uuid": "^9.0.1",
-    "date-fns": "^2.30.0"
+    "zod": "^3.22.4"
   },
   "devDependencies": {
-    "@types/express": "^4.17.21",
-    "@types/cors": "^2.8.17",
-    "@types/morgan": "^1.9.9",
-    "@types/compression": "^1.7.5",
+    "@openapitools/openapi-generator-cli": "^2.12.0",
     "@types/bcryptjs": "^2.4.6",
-    "@types/jsonwebtoken": "^9.0.5",
-    "@types/pg": "^8.10.9",
-    "@types/multer": "^1.4.11",
-    "@types/uuid": "^9.0.7",
-    "@types/node": "^20.10.0",
+    "@types/compression": "^1.7.5",
+    "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.21",
     "@types/jest": "^29.5.8",
-    "typescript": "^5.3.2",
-    "ts-node-dev": "^2.0.0",
-    "jest": "^29.7.0",
-    "ts-jest": "^29.1.1",
-    "eslint": "^8.54.0",
+    "@types/jsonwebtoken": "^9.0.5",
+    "@types/morgan": "^1.9.9",
+    "@types/multer": "^1.4.11",
+    "@types/node": "^20.10.0",
+    "@types/pg": "^8.10.9",
+    "@types/supertest": "^2.0.16",
+    "@types/uuid": "^9.0.7",
     "@typescript-eslint/eslint-plugin": "^6.12.0",
     "@typescript-eslint/parser": "^6.12.0",
-    "@openapitools/openapi-generator-cli": "^2.12.0",
+    "concurrently": "^9.2.0",
+    "eslint": "^8.54.0",
+    "jest": "^29.7.0",
     "supertest": "^6.3.3",
-    "@types/supertest": "^2.0.16",
+    "ts-jest": "^29.1.1",
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^5.3.2",
     "winston": "^3.11.0"
   }
 }
