--- a/wellio-backend/services/auth/package.json
+++ b/wellio-backend/services/auth/package.json
@@ -10,35 +10,37 @@
     "test": "jest"
   },
   "dependencies": {
-    "express": "^4.18.0",
-    "cors": "^2.8.5",
-    "helmet": "^7.0.0",
-    "morgan": "^1.10.0",
-    "compression": "^1.7.4",
-    "jsonwebtoken": "^9.0.0",
     "bcryptjs": "^2.4.3",
+    "compression": "^1.7.4",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.0",
-    "winston": "^3.8.0",
-    "pg": "^8.11.0",
-    "redis": "^4.6.0",
-    "nodemailer": "^6.9.0",
+    "express": "^4.18.0",
+    "express-list-endpoints": "^7.1.1",
+    "express-rate-limit": "^6.7.0",
+    "helmet": "^7.0.0",
     "joi": "^17.9.0",
-    "express-rate-limit": "^6.7.0"
+    "jsonwebtoken": "^9.0.0",
+    "morgan": "^1.10.0",
+    "nodemailer": "^6.9.0",
+    "pg": "^8.11.0",
+    "redis": "^4.6.14",
+    "winston": "^3.8.0"
   },
   "devDependencies": {
-    "@types/express": "^4.17.17",
-    "@types/cors": "^2.8.13",
-    "@types/morgan": "^1.9.4",
-    "@types/compression": "^1.7.2",
-    "@types/jsonwebtoken": "^9.0.2",
     "@types/bcryptjs": "^2.4.2",
-    "@types/pg": "^8.10.0",
-    "@types/nodemailer": "^6.4.0",
-    "@types/node": "^20.0.0",
+    "@types/compression": "^1.7.2",
+    "@types/cors": "^2.8.13",
+    "@types/express": "^4.17.17",
     "@types/jest": "^29.0.0",
-    "typescript": "^5.0.0",
-    "nodemon": "^3.0.0",
+    "@types/jsonwebtoken": "^9.0.2",
+    "@types/morgan": "^1.9.4",
+    "@types/node": "^20.0.0",
+    "@types/nodemailer": "^6.4.0",
+    "@types/pg": "^8.10.0",
+    "concurrently": "^9.2.0",
     "jest": "^29.0.0",
-    "ts-jest": "^29.0.0"
+    "nodemon": "^3.0.0",
+    "ts-jest": "^29.0.0",
+    "typescript": "^5.0.0"
   }
-} 
+}
