--- a/wellio-backend/services/chat/package.json
+++ b/wellio-backend/services/chat/package.json
@@ -10,34 +10,35 @@
     "test": "jest"
   },
   "dependencies": {
-    "express": "^4.18.0",
-    "cors": "^2.8.5",
-    "helmet": "^7.0.0",
-    "morgan": "^1.10.0",
-    "compression": "^1.7.4",
-    "socket.io": "^4.6.0",
-    "pg": "^8.11.0",
-    "redis": "^4.6.0",
     "amqplib": "^0.10.3",
-    "jsonwebtoken": "^9.0.0",
+    "compression": "^1.7.4",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.0",
-    "winston": "^3.8.0",
-    "multer": "^1.4.5-lts.1"
+    "express": "^4.18.0",
+    "helmet": "^7.0.0",
+    "jsonwebtoken": "^9.0.0",
+    "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
+    "pg": "^8.11.0",
+    "redis": "^4.6.14",
+    "socket.io": "^4.6.0",
+    "winston": "^3.8.0"
   },
   "devDependencies": {
-    "@types/express": "^4.17.17",
-    "@types/cors": "^2.8.13",
-    "@types/morgan": "^1.9.4",
-    "@types/compression": "^1.7.2",
-    "@types/pg": "^8.10.0",
     "@types/amqplib": "^0.10.1",
+    "@types/compression": "^1.7.2",
+    "@types/cors": "^2.8.13",
+    "@types/express": "^4.17.17",
+    "@types/jest": "^29.0.0",
     "@types/jsonwebtoken": "^9.0.2",
+    "@types/morgan": "^1.9.4",
     "@types/multer": "^1.4.7",
     "@types/node": "^20.0.0",
-    "@types/jest": "^29.0.0",
-    "typescript": "^5.0.0",
-    "nodemon": "^3.0.0",
+    "@types/pg": "^8.10.0",
+    "concurrently": "^9.2.0",
     "jest": "^29.0.0",
-    "ts-jest": "^29.0.0"
+    "nodemon": "^3.0.0",
+    "ts-jest": "^29.0.0",
+    "typescript": "^5.0.0"
   }
-} 
+}
